--- a/index.html
+++ b/index.html
@@ -4,85 +4,26 @@
     <meta charset="UTF-8">
     <title>Paymentalist</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <style>
-        @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Roboto&display=swap');
+    <meta name="copyright" content="&copy; 2025 Paymentalist. All rights reserved." />
 
-        body {
-            margin: 0;
-            font-family: 'Roboto', sans-serif;
-            background-color: #111;
-            color: #f9f9f9;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            text-align: center;
-            padding: 2rem;
-        }
+    <!-- SVG Favicon -->
+    <link rel="icon" href="favicon.svg" type="image/svg+xml">
+    <!-- PNG Fallback -->
+    <link rel="icon" href="favicon.png" type="image/png">
+    <!-- Alternative sizes for PNG Favicon -->
+    <link rel="icon" href="favicon-32x32.png" sizes="32x32" type="image/png">
+    <link rel="icon" href="favicon-16x16.png" sizes="16x16" type="image/png">
 
-        header img {
-            max-width: 180px;
-            margin-bottom: 2rem;
-        }
-
-        h1 {
-            font-family: 'Playfair Display', serif;
-            font-size: 2.5rem;
-            margin-bottom: 1rem;
-        }
-
-        .definition {
-            max-width: 700px;
-            background: rgba(255, 255, 255, 0.05);
-            padding: 2rem;
-            border-radius: 8px;
-            margin-bottom: 2rem;
-        }
-
-        .definition em {
-            font-style: italic;
-            color: #ccc;
-        }
-
-        .definition .pronunciation {
-            font-size: 1rem;
-            color: #aaa;
-        }
-
-        .definition p {
-            font-size: 1.1rem;
-            line-height: 1.6;
-        }
-
-        .cta {
-            margin-top: 2rem;
-            font-size: 1.2rem;
-        }
-
-        .cta a {
-            color: #00ffe1;
-            text-decoration: none;
-            font-weight: bold;
-        }
-
-        .cta a:hover {
-            text-decoration: underline;
-        }
-
-        footer {
-            margin-top: 3rem;
-            font-size: 0.9rem;
-            color: #666;
-        }
-    </style>
+    <link rel="stylesheet" href="styles/global-min.css">
 </head>
 <body>
     <header>
-        <img src="https://via.placeholder.com/180x60.png?text=Paymentalist+Logo" alt="Paymentalist Logo">
+        <img src="images/paymentalist-wordmark-white.svg" alt="Paymentalist">
     </header>
     <main>
-        <h1>Paymentalist</h1>
+        <!-- <h1>Paymentalist</h1> -->
         <div class="definition">
-            <div><em>pay·ment·al·ist</em> <span class="pronunciation">/ˈpā-mən-tə-list/</span></div>
+            <div><em>pay·ment·al·ist</em> <span class="pronunciation">/'pā-mən-tə-list/</span></div>
             <p><strong>noun</strong></p>
             <p>1. A specialist who seamlessly orchestrates payment experiences with such precision and intuition that they appear effortless or even magical—akin to a mentalist who predicts thoughts and influences decisions without detection.</p>
             <p>2. A master of the payment arts, blending deep knowledge of financial systems, user behavior, and design to create frictionless, intelligent payment journeys that anticipate needs and defy expectations.</p>
@@ -90,11 +31,12 @@
         </div>
         <div class="cta">
             <p>Have a payment problem worth solving?</p>
-            <p><a href="mailto:hello@paymentalist.com">Email us at hello@paymentalist.com</a></p>
+            <p><a class="btn" href="mailto:hello@paymentalist.com">Email Us</a></p>
         </div>
     </main>
     <footer>
         &copy; 2025 Paymentalist. All rights reserved.
     </footer>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Roboto&display=swap">
 </body>
 </html>
